src/test/resources/private/typechecking/fail/return/fail05.jova
class Helper {
}

class B {
    public Helper getHelper(){
        Helper a;
        a = new Helper;
        return a;
    }
}

class A {

  private Helper get3(Helper h) {
    return h;
  }

  public Helper func() {
    B b;
    int foo;
    foo = 3;
    b = new B;


    return foo + get3(b.getHelper());
  }
}
